# ir-final

./: CMakeLists.txt  package.xml  setup.py
data/: map.pgm  map.yaml  supermarketV2.pgm  supermarketV2.yaml
launch/: supermarket.launch
models/all_supermarket_models/final_supermarket_wall/: model.config  model.sdf
models/all_supermarket_models/left_box/: model.config  model.sdf
models/all_supermarket_models/middle_box/: model.config  model.sdf
models/all_supermarket_models/newshelf/: model.config  model.sdf
models/all_supermarket_models/newsupermarketwall/: model.config
models/all_supermarket_models/purple_wall/: model.config  model.sdf
models/all_supermarket_models/qr_wall_fruit/meshes/: qr_wall.dae
models/all_supermarket_models/qr_wall_milk/: model.config
models/all_supermarket_models/qr_wall_snack/: model.sdf
models/all_supermarket_models/right_box/: model.config  model.sdf
models/all_supermarket_models/smaller_wall/: model.config  model.sdf
models/full_supermarket/: model.config  model.sdf
models/new_supermarket_wall/newsupermarketwall/: model.sdf
models/turtlebot3_supermarket/: model.config  model.sdf
param/: costmap_common_params_burger.yaml
scripts/: data.json  dijkstras.py  goal.py  obstacle_avoidance.py  qr_scan.py
src/: supermarket_drive.cpp
worlds/: supermarket.world
